k8s/prod/ingress-service.yaml
apiVersion: networking.k8s.io/v1
# UPDATE API
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Access-Control-Allow-Methods "POST, GET, OPTIONS";
      add_header Access-Control-Allow-Credentials true;
    nginx.ingress.kubernetes.io/enable-cors: 'true'
    nginx.ingress.kubernetes.io/cors-allow-methods: 'PUT, GET, POST, OPTIONS'
spec:
  rules:
    - host: ad924fcda0bbd446cbd9b9d2ef679573-3c141679486970bd.elb.us-east-1.amazonaws.com
        http:
          paths:
            - path: /?(.*)
              # UPDATE PATH
              pathType: Prefix
              # ADD PATHTYPE
              backend:
                service:
                  # UPDATE SERVICE FIELDS
                  name: fe-clusterip-service
                  port:
                    number: 80
            - path: /api/?(.*)
              # UPDATE PATH
              pathType: Prefix
              # ADD PATHTYPE
              backend:
                service:
                  # UPDATE SERVICE FIELDS
                  name: mule-clusterip-service
                  port:
                    number: 3000
